# canoncial_multipass_technical_test_mfurkaner

./: CMakeLists.txt  README.md
include/: ubuntu_cloud_image_fetcher.h  ubuntu_cloud_image_info.h
src/: main.cpp  ubuntu_cloud_image_fetcher.cpp
